# systems

./: analyze_videos.py  different.py  genai_client_temp.py
advanced_python/: ad_banner_distribution.py  ad_banner_distribution_v2.py  atm_machine_lock.py  atm_machine_lock_v2.py  booking_mvp_v1.py  booking_mvp_v2.py  cистема_для_создания_бекапов.py  cистема_для_создания_бекапов_v2.py  dynamic_typic.py  facebook_photo_backup_solve.py  lock_manager.py  locks.py  locks_client.py  managing_coros.py  multi.py  netflix_offline_downloads_solve.py  netflix_playback.py  prefix_arr_container.py  problems.md  test_booking_mvp_2.py  test_lock_manager.py  test_netflix_playback.py  Буферизированный_пайплайн_передачи_данных.py  Буферизированный_пайплайн_передачи_данных_v2.py  Софт_для_SDK_банкомата.py  Софт_для_SDK_банкомата_v2.py  Ускоряем_генерацию_thumbnail_v1.py  Ускоряем_генерацию_thumbnail_v2.py
agent-with-skills/: .gitignore  README.md  docker-compose.yaml  read.md
api-gateway/: docker-compose.yaml
event-driven-principles/: observer.py  server.py
events-systems/fine-tuning-llm-mechanism/: README.md  answers.db  db.py  foo.py  main.py  mimic_answers_upload.py  pyproject.toml  server_answers.py
examples/: consistent_hashing.py  server.py  snipets.py  url_shortener.py
fastapi/: endpoints.py
fawler/: conrurrent-futures.py
langchain/: COMPONENTS.md  PRINCIPLES.md  w_chaining.py
problems/: cache_with_hash_table.py  conquer_and_divide.py  conquer_and_divide_sum.py  dekstra.md  dynamic_problems.md  facebook_is_user_registered.py  facebook_storing_users.py  graphs.md  (+11 more)
(+90 files in other folders)
